--- a/package.json
+++ b/package.json
@@ -10,8 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^15.3.0",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/react-query": "^5.72.1",
+    "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "ldrs": "^1.1.6",
+    "lucide-react": "^0.488.0",
+    "motion": "^12.7.1",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.1",
+    "react-tweet": "^3.2.2",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
