--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@next/eslint-plugin-next": "^15.3.0",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-navigation-menu": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-query": "^5.72.1",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "ldrs": "^1.1.6",
+    "ldrs": "^1.1.7",
     "lucide-react": "^0.488.0",
     "motion": "^12.7.1",
     "postcss": "^8.5.3",
